<resources>
    <string name="app_name">iTunes Feed RSS App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="audio_book_text_view_label">Audio Book</string>
    <string name="books_text_view_label">Books</string>
    <string name="ios_text_view_label">iOS Apps</string>
    <string name="mac_text_view_label">Mac Apps</string>
    <string name="movies_text_view_label">Movies</string>
    <string name="itunes_u_text_view_label">iTunes U</string>
    <string name="music_video_text_view_label">Music Video</string>
    <string name="pod_cast_text_view_label">Pod Cast</string>
    <string name="tv_shows_text_view_label">TV Shows</string>
    <string name="title_activity_media_list">Media List Activity</string>
    <string name="title_activity_detailed_media">DetailedMediaActivity</string>
    <string name="app_link_text_label">App Link in Store: </string>
    <string name="category_text_view_label">Category: </string>
    <string name="price_text_view_label">Price: </string>
    <string name="by_text_view_label">By:</string>
    <string name="STRING_SET_LIST">LIST</string>
    <string name="INDEX_EXTRA">INDEX</string>
    <string name="ENTRY_JSON_RESOURCE">ENTRY_JSON</string>
</resources>
